--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,20 +29,20 @@ export( ageLinearModel,
 	xmlvfval,
 	loadvfxmlbatch,
 	xmlvfxy,
-        vfColorMap,
+        vfcolormap,
 	vfplot,
 	vfplotloc,
 	createviewport,
 	vflayout,
 	vfgrayscale,
-        vfsegmentCoord,
+        vfsegmentcoord,
 	bebie,
 	stimLoc,
 	colorMapGraph,
 	poplr,
 	poplr_pstat,
 	poplr_cstat,
-	vflayout_legoplots,
+	vflayout_legoplot,
 	vfplot_poplr,	vflayout_poplr,
 	hist_poplr,
 	progols )
