--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,11 +38,14 @@ export( ageLinearModel,
         vfsegmentcoord,
 	bebie,
 	stimLoc,
-	colorMapGraph,
+	colormapgraph,
 	poplr,
 	poplr_pstat,
 	poplr_cstat,
 	vflayout_legoplot,
 	vfplot_poplr,	vflayout_poplr,
 	hist_poplr,
-	progols )
+	progols,
+	vfsort,
+	vfselectvisit,
+	ringmapgraph )
