--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,11 @@ Description: A collection of tools for analyzing the field of vision.
         methods for visualization, statistical analysis, and clinical
         interpretation of visual-field loss and its change over time.
         It is intended to be a tool for collaborative research.
-Version: 0.2-2
-Date: 2012-07-26
+Version: 0.2-4
+Date: 2012-09-16
+Author: Ivan Marin-Franch <imarinfr@indiana.edu>, Paul H Artes
+        <paul@dal.ca>
+Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
 Authors@R: c( person( given = "Ivan", family = "Marin-Franch", role =
         c( "aut", "cre" ), comment = NULL, email =
         "imarinfr@indiana.edu" ), person( given = "Paul H", family =
@@ -15,23 +18,20 @@ Authors@R: c( person( given = "Ivan", family = "Marin-Franch", role =
         "paul@dal.ca" ), person( given = "Chaitanya", family =
         "Khadilkar", role = c( "ctb" ), comment = "developer" ),
         person( given = "Neil", family = "O'Leary", role = c( "ctb" ),
-        comment = "PoPLR" ), person( given = "Richard", family =
-        "Russell", role = c( "ctb" ), comment = "xml2csv" ), person(
-        given = "William H", family = "Swanson", role = c( "ctb" ),
-        comment = "normative values" ), person( given = "Mitchell W",
-        family = "Dul", role = c( "ctb" ), comment = "normative values"
-        ), person( given = "Victor E", family = "Malinovsky", role = c(
-        "ctb" ), comment = "normative values" ) )
-Depends: R (>= 2.10.0), stats, utils, gridBase, flip, matrixStats,
+        comment = "PoPLR" ), person( given = "William H", family =
+        "Swanson", role = c( "ctb" ), comment = "normative values" ),
+        person( given = "Victor E", family = "Malinovsky", role = c(
+        "ctb" ), comment = "normative values" ), person( given =
+        "Mitchell W", family = "Dul", role = c( "ctb" ), comment =
+        "normative values" ), person( given = "Richard", family =
+        "Russell", role = c( "ctb" ), comment = "xml2csv" ) )
+Depends: R (>= 2.14.0), stats, utils, gridBase, flip, matrixStats,
         Hmisc
 LazyData: yes
 License: GPL (>= 2.0)
-Packaged: 2012-07-31 14:41:28 UTC; ivanmarin-franch
-Author: Ivan Marin-Franch [aut, cre], Paul H Artes [aut], Chaitanya
-        Khadilkar [ctb] (developer), Neil O'Leary [ctb] (PoPLR),
-        Richard Russell [ctb] (xml2csv), William H Swanson [ctb]
-        (normative values), Mitchell W Dul [ctb] (normative values),
-        Victor E Malinovsky [ctb] (normative values)
-Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
 Repository: CRAN
-Date/Publication: 2012-07-31 16:06:42
+Repository/R-Forge/Project: visualfields
+Repository/R-Forge/Revision: 13
+Repository/R-Forge/DateTimeStamp: 2012-09-17 16:23:07
+Date/Publication: 2012-09-18 20:17:09
+Packaged: 2012-09-17 18:20:27 UTC; rforge
