--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Description: A collection of tools for analyzing the field of vision.
         methods for visualization, statistical analysis, and clinical
         interpretation of visual-field loss and its change over time.
         It is intended to be a tool for collaborative research.
-Version: 0.2-4
-Date: 2012-09-16
+Version: 0.2-8
+Date: 2012-11-13
 Author: Ivan Marin-Franch <imarinfr@indiana.edu>, Paul H Artes
         <paul@dal.ca>
 Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
@@ -29,9 +29,6 @@ Depends: R (>= 2.14.0), stats, utils, gridBase, flip, matrixStats,
         Hmisc
 LazyData: yes
 License: GPL (>= 2.0)
+Packaged: 2012-11-14 02:07:25 UTC; ivanmarin-franch
 Repository: CRAN
-Repository/R-Forge/Project: visualfields
-Repository/R-Forge/Revision: 13
-Repository/R-Forge/DateTimeStamp: 2012-09-17 16:23:07
-Date/Publication: 2012-09-18 20:17:09
-Packaged: 2012-09-17 18:20:27 UTC; rforge
+Date/Publication: 2012-11-14 07:19:37
