--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Description: A collection of tools for analyzing the field of vision.
         methods for visualization, statistical analysis, and clinical
         interpretation of visual-field loss and its change over time.
         It is intended to be a tool for collaborative research.
-Version: 0.2-8
-Date: 2012-11-13
+Version: 0.2-13
+Date: 2013-01-21
 Author: Ivan Marin-Franch <imarinfr@indiana.edu>, Paul H Artes
         <paul@dal.ca>
 Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
@@ -29,6 +29,9 @@ Depends: R (>= 2.14.0), stats, utils, gridBase, flip, matrixStats,
         Hmisc
 LazyData: yes
 License: GPL (>= 2.0)
-Packaged: 2012-11-14 02:07:25 UTC; ivanmarin-franch
 Repository: CRAN
-Date/Publication: 2012-11-14 07:19:37
+Repository/R-Forge/Project: visualfields
+Repository/R-Forge/Revision: 24
+Repository/R-Forge/DateTimeStamp: 2013-01-21 20:31:08
+Date/Publication: 2013-02-01 17:41:22
+Packaged: 2013-01-21 23:15:19 UTC; rforge
