--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Description: A collection of tools for analyzing the field of vision.
         methods for visualization, statistical analysis, and clinical
         interpretation of visual-field loss and its change over time.
         It is intended to be a tool for collaborative research.
-Version: 0.2-13
-Date: 2013-01-21
+Version: 0.2-14
+Date: 2013-02-24
 Author: Ivan Marin-Franch <imarinfr@indiana.edu>, Paul H Artes
         <paul@dal.ca>
 Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
@@ -25,13 +25,11 @@ Authors@R: c( person( given = "Ivan", family = "Marin-Franch", role =
         "Mitchell W", family = "Dul", role = c( "ctb" ), comment =
         "normative values" ), person( given = "Richard", family =
         "Russell", role = c( "ctb" ), comment = "xml2csv" ) )
-Depends: R (>= 2.14.0), stats, utils, gridBase, flip, matrixStats,
-        Hmisc
+Depends: R (>= 2.14.0), stats, utils, gridBase, flip (>= 1.3),
+        matrixStats, Hmisc
 LazyData: yes
 License: GPL (>= 2.0)
+Packaged: 2013-03-08 19:24:57 UTC; ivanmarin-franch
+NeedsCompilation: no
 Repository: CRAN
-Repository/R-Forge/Project: visualfields
-Repository/R-Forge/Revision: 24
-Repository/R-Forge/DateTimeStamp: 2013-01-21 20:31:08
-Date/Publication: 2013-02-01 17:41:22
-Packaged: 2013-01-21 23:15:19 UTC; rforge
+Date/Publication: 2013-03-08 20:34:01
