--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,16 +6,16 @@ Description: A collection of tools for analyzing the field of vision.
         methods for visualization, statistical analysis, and clinical
         interpretation of visual-field loss and its change over time.
         It is intended to be a tool for collaborative research.
-Version: 0.3
-Date: 2013-03-15
+Version: 0.3-2
+Date: 2013-06-07
 Author: The visualFields Development Team
 Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
 URL: http://people.eng.unimelb.edu.au/aturpin/opi/index.html
-Depends: R (>= 2.14.0), stats, utils, gridBase, flip (>= 2.0),
+Depends: R (>= 2.14.0), stats, utils, gridBase, flip (>= 2.1),
         matrixStats, Hmisc
 LazyData: yes
 License: GPL (>= 2.0)
-Packaged: 2013-03-18 18:55:44 UTC; ivanmarin-franch
+Packaged: 2013-06-08 16:13:03 UTC; ivanmarin-franch
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-03-18 21:35:19
+Date/Publication: 2013-06-08 19:36:33
