--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,16 @@ Package: visualFields
 Type: Package
 Title: Statistical methods for visual fields
 Description: A collection of tools for analyzing the field of vision. It provides a framework for development and use of innovative methods for visualization, statistical analysis, and clinical interpretation of visual-field loss and its change over time. It is intended to be a tool for collaborative research.
-Version: 0.3-5
-Date: 2013-10-09
+Version: 0.4
+Date: 2014-02-21
 Author: The visualFields Development Team
-Maintainer: Ivan Marin-Franch <imarinfr@indiana.edu>
+Maintainer: Ivan Marin-Franch <ivan.marin@uv.es>
 URL: http://people.eng.unimelb.edu.au/aturpin/opi/index.html
 Depends: R (>= 2.14.0), stats, utils, gridBase, flip (>= 2.1),
         matrixStats, Hmisc
 LazyData: yes
 License: GPL (>= 2.0)
-Packaged: 2013-10-09 19:27:31 UTC; ivanmarin-franch
+Packaged: 2014-03-02 20:45:20 UTC; ivanmarin-franch
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-10-10 14:10:10
+Date/Publication: 2014-03-03 07:36:20
